--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,8 @@ moshiVersion = "1.15.2"
 hiltVersion = "2.51.1"
 navigationVersion = "2.8.7"
 coilVersion = "3.1.0"
-pagingVersion = "3.3.2"
+pagingVersion = "3.3.6"
+coroutineTestVersion = "1.10.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +45,8 @@ androidx-navigation-safeargs = { group = "androidx.navigation", name = "navigati
 coil = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coilVersion" }
 coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coilVersion" }
 androidx-paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "pagingVersion" }
+coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutineTestVersion" }
+paging-test = { group = "androidx.paging", name = "paging-testing", version.ref = "pagingVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
